Further fixes for i387. Does not let you go into edit mode when the drop down already visible. Fixes when showing common names and/or groups.

--- a/media/css/default_site.css
+++ b/media/css/default_site.css
@@ -4,6 +4,11 @@
   border: 1px solid #D3D3D3;
 }
 
+scTaxonCell p.inline-error {
+  /* hide the error in the species input as it messes layout */
+  display: none;
+}
+
 .scTaxonCell .ui-effects-wrapper {
   width: 100% !important;
 }
@@ -386,9 +391,15 @@ table tr.odd {
   margin: 1px;
 }
 
-.remove-row {
+td.row-buttons {
+  width: 16px;
+}
+
+td.row-buttons img {
   cursor: pointer;
-  width: 8px;
+  width: 14px;
+  margin: 1px;
+  padding: 0;
 }
 
 .ui-tabs .ui-tabs-nav li {
